--- a/src/面试/重生归来之预渲染插件原理.md
+++ b/src/面试/重生归来之预渲染插件原理.md
@@ -174,3 +174,4 @@ page.on('response', response => {
 
 ## 预渲染插件设计原理
 
+[流程图](https://excalidraw.com/#json=kwc0SRyIO8L5SRHWlgAj_,BFy51rti4LB-xs4vNR9z5g)
